--- a/contact.html
+++ b/contact.html
@@ -68,8 +68,6 @@
 
 <div class="col-6">
   <br>
-  <br>
-  <br>
   
 
   <div class="outer-div">
@@ -80,8 +78,6 @@
         <div class="front__text">
           <h3 class="front__text-header">Colin Roberts</h3>
           <br>
-  <br>
-  
           <p class="front__text-para"><i class="fas fa-map-marker-alt front-icons"></i>Data Engineer</p>
           <br>
           <p class="front__text-para"><i class="fas fa-map-marker-alt front-icons"></i>Data Analyst</p>
@@ -118,7 +114,7 @@
     <div class="footer-link"> 
       <ul>
         <ul>
-          <li><a href="index.html">Letter</a></li>
+          <li><a href="index.html">Intro</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="certificates.html">Certificates</a></li>
           <li><a href="Reporting.html">Reporting</a></li>
