--- a/contact.html
+++ b/contact.html
@@ -43,12 +43,12 @@
     </a>
     <div class="navbar-links">
       <ul>
-        <li><a href="index.html">Letter</a></li>
+        <li><a href="index.html">Intro</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="certificates.html">Certificates</a></li>
-        <li><a href="Reporting.html">Reporting</a></li>
-        <li><a href="Analyzing.html">Analyzing</a></li>
-        <li><a href="Databases.html">Databases</a></li>
+        <li><a href="reporting.html">Reporting</a></li>
+        <li><a href="analyzing.html">Analyzing</a></li>
+        <li><a href="databases.html">Databases</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
 </div>
