--- a/resume.html
+++ b/resume.html
@@ -87,8 +87,8 @@
 •	NoSQL & Big Data using MongoDB, Cassandra, Cloudant, Hadoop, Apache Spark, Spark SQL, Spark ML, Spark Streaming. <br>
 •	Implement ETL & Data Pipelines with Bash, Airflow & Kafka; architect, populate, deploy Data Warehouses; create BI reports & interactive dashboards. <br>
 
-<h3>Education:</h3>
-<b>Data Engineer Certificates</b>
+<h3>Education:</h3> <br>
+<b>Data Engineer Certificates</b> <br>
 -IBM SQL and Data Analysis <br>
 -IBM Data Warehousing and BI Analytics<br>
 -IBM NoSQL Databases<br>
