--- a/resume.html
+++ b/resume.html
@@ -110,7 +110,8 @@ Graphic Design and Web Design- Adobe Illustrator/ Photoshop/ Indesign/ Premiere 
 C++, Python, SQL, R, JSON, Postgres, Kafka, Airflow, CRON jobs, Bash/Shell script. IBM DB2, Pandas, MySQL  
 <h3>Work History:</h3>
 <b>Freelance Data Analyst- </b>
-<br><i>2019- 2023</i>
+<br>
+  <i>2019- 2023</i>
 <br>
 Business Reports Graphs and Analytics”, Data Engineer (“build Databases and transform/clean data”).        
 
@@ -122,6 +123,13 @@ Business Reports Graphs and Analytics”, Data Engineer (“build Databases and 
  I focused on business growth and development. I create schemas and databases for business. As well as develop BI reports and analytics. Web & Graphic Design and customer relations. Tasked with gathering information from clients and creating logos, color schemes and writing engaging content for websites and their business. Engaging with clients on the direction of business strategies. Helping Business acquire LLC’s. Manage and development database for client information.
  <br>
  <br>
+  <h3>References:</h3>
+  <br>
+  Robin Plescea – General Manager Bloom Business Solutions | <i>phone-(615) 669- 0547</i>
+  <br>
+  Scott Depasquale – Business Owner of Get Smart |<i> phone- (330) 540- 9887</i>
+  <br>
+
  <a href="Colin_Roberts_Resume.pdf" download>
   <center><button>DOWNLOAD PDF HERE FOR A COPY</button></center>
   </a>
