--- a/resume.html
+++ b/resume.html
@@ -125,9 +125,13 @@ Business Reports Graphs and Analytics”, Data Engineer (“build Databases and 
 
   <h3>References:</h3>
   <br>
-  Robin Plescea – General Manager Bloom Business Solutions | <i>phone-(615) 669- 0547</i>
+  Robin Plescea – <br>
+  General Manager Bloom Business Solutions <br> 
+  <i>phone-(615) 669- 0547</i>
   <br>
-  Scott Depasquale – Business Owner of Get Smart |<i> phone- (330) 540- 9887</i>
+  Scott Depasquale – <br>
+  Business Owner of Get Smart <br>
+  <i> phone- (330) 540- 9887</i>
   <br>
 <br>
  <a href="Colin_Roberts_Resume.pdf" download>
