--- a/resume.html
+++ b/resume.html
@@ -127,11 +127,13 @@ Business Reports Graphs and Analytics”, Data Engineer (“build Databases and 
   <br>
   Robin Plescea – <br>
   General Manager Bloom Business Solutions <br> 
-  <i>phone-(615) 669- 0547</i>
+  <i>phone-<br>
+    (615) 669- 0547</i>
   <br>
   Scott Depasquale – <br>
   Business Owner of Get Smart <br>
-  <i> phone- (330) 540- 9887</i>
+  <i> phone- <br>
+    (330) 540- 9887</i>
   <br>
 <br>
  <a href="Colin_Roberts_Resume.pdf" download>
