--- a/resume.html
+++ b/resume.html
@@ -82,6 +82,7 @@
 <!---------------------------------------------------------- Resume-text--------------------------------------------------------->
 
 <h3>Skills:</h3>
+•	Power BI Developer, DAX architect, Business report and forecast Analysis, Interface creator.   
 •	Create, design, and manage relational databases and apply database administration (DBA) concepts to RDBMS such as MySQL, PostgreSQL, and IBM Db2. <br>
 •	Develop and execute SQL queries using SELECT, INSERT, UPDATE, DELETE statements, database functions, stored procedures, Nested Queries, and JOINs. <br>
 •	NoSQL & Big Data using MongoDB, Cassandra, Cloudant, Hadoop, Apache Spark, Spark SQL, Spark ML, Spark Streaming. <br>
@@ -89,6 +90,7 @@
 
 <h3>Education:</h3> <br>
 <b>Data Engineer Certificates</b> <br>
+-POWER BI Data Analysis and Reporting <br>
 -IBM SQL and Data Analysis <br>
 -IBM Data Warehousing and BI Analytics<br>
 -IBM NoSQL Databases<br>
