--- a/resume.html
+++ b/resume.html
@@ -80,9 +80,14 @@
 <div class="col-6">
   <h2>Resume</h2>
 <!---------------------------------------------------------- Resume-text--------------------------------------------------------->
-
-<h3>Skills:</h3>
-•	Power BI Developer, DAX architect, Business report and forecast Analysis, Interface creator.   
+<h2>COLIN ROBERTS </h2> <br>
+<h2>DATA SPECIALIST</h2> <br>
+<h2>EMAIL: </h2> <br>
+ <h2> ColinRoberts.Contact@Gmail</h2> <br>
+<h2>PHONE:</h2> <br>
+  <h2>615-971-3304</h2> <br>
+<h3>Skills:</h3> <br>
+•	Power BI Developer, DAX architect, Business report and forecast Analysis, Interface creator.  <br>  
 •	Create, design, and manage relational databases and apply database administration (DBA) concepts to RDBMS such as MySQL, PostgreSQL, and IBM Db2. <br>
 •	Develop and execute SQL queries using SELECT, INSERT, UPDATE, DELETE statements, database functions, stored procedures, Nested Queries, and JOINs. <br>
 •	NoSQL & Big Data using MongoDB, Cassandra, Cloudant, Hadoop, Apache Spark, Spark SQL, Spark ML, Spark Streaming. <br>
