--- a/resume.html
+++ b/resume.html
@@ -80,12 +80,12 @@
 <div class="col-6">
   <h2>Resume</h2>
 <!---------------------------------------------------------- Resume-text--------------------------------------------------------->
-<h2>COLIN ROBERTS </h2> <br>
-<h2>DATA SPECIALIST</h2> <br>
-<h2>EMAIL: </h2> <br>
- <h2> ColinRoberts.Contact@Gmail</h2> <br>
-<h2>PHONE:</h2> <br>
-  <h2>615-971-3304</h2> <br>
+<h3>COLIN ROBERTS </h3> <br>
+DATA SPECIALIST <br>
+<h3>EMAIL: </h3> <br>
+ColinRoberts.Contact@Gmail <br>
+<h3>PHONE:</h3> <br>
+  615-971-3304 <br>
 <h3>Skills:</h3> <br>
 •	Power BI Developer, DAX architect, Business report and forecast Analysis, Interface creator.  <br>  
 •	Create, design, and manage relational databases and apply database administration (DBA) concepts to RDBMS such as MySQL, PostgreSQL, and IBM Db2. <br>
