--- a/resume.html
+++ b/resume.html
@@ -82,9 +82,9 @@
 <!---------------------------------------------------------- Resume-text--------------------------------------------------------->
 <h3>COLIN ROBERTS </h3> <br>
 DATA SPECIALIST <br>
-<h3>EMAIL: </h3> <br>
+EMAIL: 
 ColinRoberts.Contact@Gmail <br>
-<h3>PHONE:</h3> <br>
+PHONE: 
   615-971-3304 <br>
 <h3>Skills:</h3> <br>
 •	Power BI Developer, DAX architect, Business report and forecast Analysis, Interface creator.  <br>  
