--- a/certificates.html
+++ b/certificates.html
@@ -711,7 +711,53 @@
 <!----------------------------------------------------------FOOTER--------------------------------------------------------->
 <!----------------------------------------------------------FOOTER--------------------------------------------------------->
 <!----------------------------------------------------------FOOTER--------------------------------------------------------->
+<footer class="main-footer">
 
+
+  <div class="row">
+  <div class="col-13">
+  </div>
+  <div class="col-14">
+    <div class="footer-link"> 
+      <ul>
+        <li><a href="index.html">Intro</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="certificates.html">Certificates</a></li>
+        <li><a href="reporting.html">Reporting</a></li>
+        <li><a href="analyzing.html">Analyzing</a></li>
+        <li><a href="databases.html">Databases</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+  </div>
+  <section id="footer">
+      <div class="container text-center">
+        <a href="https://my.indeed.com/p/colinr-zzg9wzr" class="indeed"></a>
+        <a href="https://www.linkedin.com/in/colin-roberts-996354165/" class="linkedin"></a>
+        <a href="https://www.facebook.com/colin.roberts.9028" class="facebook"></a>
+        <a href="mailto:colinroberts.contact@gmail.com" class="gmail"></a>
+    </ul>
+   
+    </section> 
+  </div>
+   <div class="col-15">
+  
+  </div>
+  </div> 
+  <div class="row">
+    <div class="col-16">
+  </div> 
+   <div class="col-17">
+   
+    <center><bold>
+    <p>Copyright &copy; 2023 Colin Roberts Designs</p>
+   </center></bold>
+  </div>
+   <div class="col-18">
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><span class="iconify" data-icon="emojione-v1:top-arrow"></span><span class="iconify" data-icon="emojione:top-hat"></span></button>
+  </div> 
+  
+  </div>
+  </footer>
 
 </body>
 </html>
