--- a/resume.html
+++ b/resume.html
@@ -72,7 +72,12 @@
 
 <!----------------------------------------------------------LEFT SECTION TOP--------------------------------------------------------->
 <!----------------------------------------------------------1ST LEFT IMG--------------------------------------------------------->
+<div class="row">
+    <div class="col-3">
 
+</div>
+<!----------------------------------------------------------MID SECTION TOP  Resume--------------------------------------------------------->	
+<div class="col-6">
   <h2>Resume</h2>
 <!---------------------------------------------------------- Resume-text--------------------------------------------------------->
 <h3>COLIN ROBERTS </h3> <br>
@@ -146,10 +151,10 @@ Business Reports Graphs and Analytics”, Data Engineer (“build Databases and 
 </div>
 <!----------------------------------------------------------RIGHT SECTION TOP--------------------------------------------------------->
 <!----------------------------------------------------------1ST RIGHT IMG--------------------------------------------------------->
+<div class="col-10">
 
 
-
-
+</div>
 </div>
 
 
