--- a/reporting.html
+++ b/reporting.html
@@ -63,7 +63,7 @@
 <div class="row">
   <div class="col-3">
     <center><p></p></center>
-    <center><img id="myImg1" src="img/power_bi_mocks/mockup_1.png" alt="Power B I"></center>
+    <center><img id="myImg1" src="img/mockup_1.png" alt="Power B I"></center>
     
         <!-- The Modal -->
         <div id="myModal" class="modal">
@@ -101,7 +101,7 @@
 
   <!----------------------------------------------------------2nD left IMG--------------------------------------------------------->
   <center><p></p></center>
-  <center><img id="myImg2" src="img/power_bi_mocks/mockup_2.png" alt="Power B I "></center>
+  <center><img id="myImg2" src="img/mockup_2.png" alt="Power B I "></center>
   
   <!-- The Modal -->
   <div id="myModal" class="modal">
@@ -136,7 +136,7 @@
   
   <!----------------------------------------------------------3rd left --------------------------------------------------------->
   <center><p></p></center>
-  <center><img id="myImg3" src="img/power_bi_mocks/mockup_3" alt="Power B I "></center>
+  <center><img id="myImg3" src="img/mockup_3" alt="Power B I "></center>
   
   <!-- The Modal -->
   <div id="myModal" class="modal">
@@ -412,8 +412,7 @@ span.onclick = function() {
 }
 </script>
 <br>  
-
-</div>    
+   
 
 </div> 
 <!----------------------------------------------------------MID SECTION TOP--------------------------------------------------------->	
@@ -443,7 +442,7 @@ Overall, my data reporting skills allow me to effectively communicate data insig
 <div class="row">
   <div class="col-10">
     <center><p></p></center>
-    <center><img id="myImg11" src="img/power_bi_mocks/mockup_4.png" alt="Power B I "></center>
+    <center><img id="myImg11" src="img/mockup_4.png" alt="Power B I "></center>
     
         <!-- The Modal -->
         <div id="myModal" class="modal">
@@ -480,7 +479,7 @@ Overall, my data reporting skills allow me to effectively communicate data insig
 
   <!----------------------------------------------------------2nD RIGHT IMG--------------------------------------------------------->
   <center><p></p></center>
-  <center><img id="myImg12" src="img/power_bi_mocks/mockup_5.png" alt="Power B I "></center>
+  <center><img id="myImg12" src="img/mockup_5.png" alt="Power B I "></center>
   
   <!-- The Modal -->
   <div id="myModal" class="modal">
@@ -515,7 +514,7 @@ Overall, my data reporting skills allow me to effectively communicate data insig
   
   <!----------------------------------------------------------3rd right --------------------------------------------------------->
   <center><p></p></center>
-  <center><img id="myImg13" src="img/power_bi_mocks/mockup_6" alt="Power B I "></center>
+  <center><img id="myImg13" src="img/mockup_6" alt="Power B I "></center>
   
   <!-- The Modal -->
   <div id="myModal" class="modal">
