--- a/reporting.html
+++ b/reporting.html
@@ -136,7 +136,7 @@
   
   <!----------------------------------------------------------3rd left --------------------------------------------------------->
   <center><p></p></center>
-  <center><img id="myImg3" src="img/mockup_3" alt="Power B I "></center>
+  <center><img id="myImg3" src="img/mockup3" alt="Power B I "></center>
   
   <!-- The Modal -->
   <div id="myModal" class="modal">
@@ -376,7 +376,7 @@ Overall, my data reporting skills allow me to effectively communicate data insig
   
   <!----------------------------------------------------------3rd right --------------------------------------------------------->
   <center><p></p></center>
-  <center><img id="myImg13" src="img/mockup_6" alt="Power B I "></center>
+  <center><img id="myImg13" src="img/mockup6" alt="Power B I "></center>
   
   <!-- The Modal -->
   <div id="myModal" class="modal">
