--- a/reporting.html
+++ b/reporting.html
@@ -136,7 +136,7 @@
   
   <!----------------------------------------------------------3rd left --------------------------------------------------------->
   <center><p></p></center>
-  <center><img id="myImg3" src="img/mockup3" alt="Power B I "></center>
+  <center><img id="myImg3" src="img/mockup_7" alt="Power B I "></center>
   
   <!-- The Modal -->
   <div id="myModal" class="modal">
