--- a/reporting.html
+++ b/reporting.html
@@ -32,6 +32,9 @@
 
 <body>
   <header>
+  <div class="row">
+   
+      
     <nav class="navbar">
 
  
@@ -51,12 +54,11 @@
         <li><a href="databases.html">Databases</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-</div>
-</nav>
-</div>
-</div>
-</div>
- </header>
+
+      </nav>
+</header>
+
+
 
 <!----------------------------------------------------------LEFT SECTION TOP--------------------------------------------------------->
 <!----------------------------------------------------------1ST LEFT IMG--------------------------------------------------------->
@@ -135,8 +137,9 @@
   <br>
   
   <!----------------------------------------------------------3rd left --------------------------------------------------------->
+  <!------------------------------------------------------------------------------------------------------------------->
   <center><p></p></center>
-  <center><img id="myImg3" src="img/mockup_7" alt="Power B I "></center>
+  <center><img id="myImg3" src="img/mockup3.png" alt="Power B I "></center>
   
   <!-- The Modal -->
   <div id="myModal" class="modal">
@@ -273,7 +276,42 @@ span.onclick = function() {
 </script>
 <br>  
 
+<!-------------------------------------------------------7 left--------------------------------------------------------->
+<center><p></p></center>
+<center><img id="myImg7" src="img/line2.png" alt="Line Graph"></center>
+  
+<!-- The Modal -->
+<div id="myModal" class="modal">
+ <span class="close">&times;</span>
+ <img class="modal-content" id="img01">
+ <div id="caption"></div>
+</div>
 
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById('myImg7');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+ modal.style.display = "block";
+ modalImg.src = this.src;
+ captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() { 
+ modal.style.display = "none";
+}
+</script>
+<br>  
+
+ 
    
 
 </div> 
@@ -375,8 +413,9 @@ Overall, my data reporting skills allow me to effectively communicate data insig
   <br>
   
   <!----------------------------------------------------------3rd right --------------------------------------------------------->
+  <!------------------------------------------------------------------------------------------------------------------->
   <center><p></p></center>
-  <center><img id="myImg13" src="img/mockup6" alt="Power B I "></center>
+  <center><img id="myImg13" src="img/mockup6.png" alt="Power B I "></center>
   
   <!-- The Modal -->
   <div id="myModal" class="modal">
@@ -411,7 +450,7 @@ Overall, my data reporting skills allow me to effectively communicate data insig
 
 <!----------------------------------------------------------4th rt IMG--------------------------------------------------------->
   <center><p></p></center>
-  <center><img id="myImg14" src="img/pie2.png" alt="Multiple Pie Chart"></center>
+  <center><img id="myImg14" src="img/mockup_7.png" alt="Power B I "></center>
   
       <!-- The Modal -->
       <div id="myModal" class="modal">
@@ -519,6 +558,43 @@ span.onclick = function() {
 
 </script>
 
+ <br>
+<!---------------------------------------------------------7th rt IMG--------------------------------------------------------->
+    
+<center><p></p></center>
+<center><img id="myImg17" src="img/pie1.png" alt="Pie Chart"></center>
+  
+<!-- The Modal -->
+<div id="myModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById('myImg17');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+  modal.style.display = "block";
+  modalImg.src = this.src;
+  captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() { 
+  modal.style.display = "none";
+}
+
+
+</script>
  <br>
 
 
