--- a/reporting.html
+++ b/reporting.html
@@ -29,12 +29,8 @@
 <script src="js/script.js" defer></script>
 <script src="js/returntotop.js" defer></script>
 </head>
-
 <body>
   <header>
-  
-   
-      
     <nav class="navbar">
 
  
@@ -54,9 +50,12 @@
         <li><a href="databases.html">Databases</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-
-      </nav>
-</header>
+</div>
+</nav>
+</div>
+</div>
+</div>
+ </header>
 
 
 
