--- a/analyzing.html
+++ b/analyzing.html
@@ -73,6 +73,10 @@
   <div id="cover4"></div>	
     <br>
   <h2> Data Analyzing:</h2>
+
+  <iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYmU5NDg0NDQtMGY3OC00NzNiLWIxZjEtZGFhMGYxNzBlNWRjIiwidCI6IjBiMWMzZTY2LTkyNGQtNGZkMC1iNmMzLTE2ZmRmODk1YjJlZiJ9" frameborder="0" allowFullScreen="true"></iframe>
+
+  <br>
  
   <p>
     As a data engineer, having strong data analyzing skills is essential for ensuring the quality and reliability of the data pipeline. Data analyzing skills allow you to interpret, visualize and draw insights from the data, enabling you to make informed decisions and identify areas for optimization in the pipeline.
