--- a/reporting.html
+++ b/reporting.html
@@ -46,7 +46,7 @@
         <li><a href="resume.html">Resume</a></li>
         <li><a href="certificates.html">Certificates</a></li>
         <li><a href="reporting.html">Reporting</a></li>
-        <li><a href="analyzing.html">Analyzing</a></li>
+        <li><a href="analyzing.html">Power BI</a></li>
         <li><a href="databases.html">Databases</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -619,7 +619,7 @@ span.onclick = function() {
         <li><a href="resume.html">Resume</a></li>
         <li><a href="certificates.html">Certificates</a></li>
         <li><a href="reporting.html">Reporting</a></li>
-        <li><a href="analyzing.html">Analyzing</a></li>
+        <li><a href="analyzing.html">Power BI</a></li>
         <li><a href="databases.html">Databases</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
