--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
         <li><a href="resume.html">Resume</a></li>
         <li><a href="certificates.html">Certificates</a></li>
         <li><a href="reporting.html">Reporting</a></li>
-        <li><a href="analyzing.html">Analyzing</a></li>
+        <li><a href="analyzing.html">Power BI</a></li>
         <li><a href="databases.html">Databases</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -175,7 +175,7 @@ Business Reports Graphs and Analytics”, Data Engineer (“build Databases and 
         <li><a href="resume.html">Resume</a></li>
         <li><a href="certificates.html">Certificates</a></li>
         <li><a href="reporting.html">Reporting</a></li>
-        <li><a href="analyzing.html">Analyzing</a></li>
+        <li><a href="analyzing.html">Power BI</a></li>
         <li><a href="databases.html">Databases</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
