--- a/analyzing.html
+++ b/analyzing.html
@@ -72,7 +72,7 @@
 <div class="col-6">
   <div id="cover4"></div>	
     <br>
-  <h2> Data Analyzing:</h2>
+  <h2> POWER BI :</h2>
 
   <iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYmU5NDg0NDQtMGY3OC00NzNiLWIxZjEtZGFhMGYxNzBlNWRjIiwidCI6IjBiMWMzZTY2LTkyNGQtNGZkMC1iNmMzLTE2ZmRmODk1YjJlZiJ9" frameborder="0" allowFullScreen="true"></iframe>
 
