--- a/analyzing.html
+++ b/analyzing.html
@@ -187,16 +187,22 @@
   <br>
  
   <p>
-    As a data engineer, having strong data analyzing skills is essential for ensuring the quality and reliability of the data pipeline. Data analyzing skills allow you to interpret, visualize and draw insights from the data, enabling you to make informed decisions and identify areas for optimization in the pipeline.
-    <br><br>
-    In my experience, I have developed a strong understnading of SQL and MySQL along with various languages pertaining to similar languages in various programs such as Postgresql, Db2 IBM, and other multiple variations of the querying language. Along with a range of data analyzing skills that have proven invaluable in optimizing data pipelines. One of my key strengths is my ability to work with large and complex datasets. I have experience working with data from various sources, including structured and unstructured data, and have used tools such as SQL, Python and R to perform data analysis.
-    <br><br>
-    In addition to my technical skills, I have developed a strong understanding of statistical concepts and have used statistical methods to analyze data. For instance, I have used hypothesis testing to determine whether changes made to a data pipeline have had a significant impact on performance.
-    <br><br> 
-    Finally, I believe that effective data analysis requires a strong understanding of the business context in which the data is being used. By understanding the goals and objectives of the organization, I am able to identify the most important metrics to track and analyze, ensuring that the data pipeline is optimized to meet the needs of the business.
-    <br><br>
+I am thrilled to have the opportunity to present my portfolio and showcase my expertise as an admin and builder of Power BI. With a strong background in sales breakdown, product breakdown, customer breakdown, SQL, and analytical skills, I am confident in my ability to contribute significantly to your organization.
+<br>
+Throughout my career, I have consistently leveraged Power BI to drive data-driven decision-making and provide valuable insights to various stakeholders. I possess a deep understanding of the Power BI ecosystem, including data modeling, report development, and dashboard creation. My skills extend beyond mere visualization, as I am adept at integrating complex data sources, writing efficient SQL queries, and performing advanced data transformations.
+<br>
+In terms of sales breakdown, I have successfully designed and implemented interactive sales dashboards that allow for comprehensive analysis of revenue trends, regional performance, and key performance indicators (KPIs). These visualizations have empowered sales teams to identify opportunities, optimize strategies, and track progress towards targets in real-time.
+<br>
+Regarding product breakdown, I have constructed robust analytical models that offer comprehensive visibility into product performance, inventory management, and demand forecasting. By developing interactive reports and visualizations, I have enabled organizations to identify top-performing products, make informed inventory decisions, and drive profitability.
+<br>
+Furthermore, my expertise in customer breakdown has allowed me to create dynamic customer segmentation models, customer lifetime value (CLTV) analysis, and churn prediction models. By leveraging these insights, organizations can enhance customer satisfaction, develop targeted marketing campaigns, and improve customer retention rates.
+<br>
+In addition to my technical skills, I am highly proficient in analyzing data, identifying patterns, and deriving actionable recommendations. I possess a strong business acumen that enables me to translate complex data into meaningful insights that drive strategic decision-making.
+<br>
+I am excited about the possibility of contributing my expertise and passion for Power BI to your esteemed organization. I am confident that my skills, along with my ability to collaborate effectively with cross-functional teams, will make me a valuable asset in leveraging data to achieve business goals.<br><br>
     Overall, my data analyzing skills are a key strength that I bring to any data engineering project. Whether it's working with complex datasets, using statistical methods to analyze data, or creating effective data visualizations, I am confident in my ability to deliver high-quality insights and analysis that drive value for the business.
 </p>
+  <br>
 </div>
 
 <!----------------------------------------------------------RIGHT SECTION TOP--------------------------------------------------------->
