--- a/analyzing.html
+++ b/analyzing.html
@@ -178,11 +178,9 @@
 
 <!----------------------------------------------------------MID SECTION TOP--------------------------------------------------------->	
 <div class="col-6">
-  <div id="cover4"></div>	
+  <div id="coverpbi"></div>	
     <br>
   <h2> POWER BI :</h2>
-
-  <iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYmU5NDg0NDQtMGY3OC00NzNiLWIxZjEtZGFhMGYxNzBlNWRjIiwidCI6IjBiMWMzZTY2LTkyNGQtNGZkMC1iNmMzLTE2ZmRmODk1YjJlZiJ9" frameborder="0" allowFullScreen="true"></iframe>
 
   <br>
  
