--- a/analyzing.html
+++ b/analyzing.html
@@ -185,16 +185,17 @@
   <br>
  
   <p>
-I am thrilled to have the opportunity to present my portfolio and showcase my expertise as an admin and builder of Power BI. With a strong background in sales breakdown, product breakdown, customer breakdown, SQL, and analytical skills, I am confident in my ability to contribute significantly to your organization.
+      I am thrilled to have the opportunity to present my portfolio and showcase my expertise as an administrator and creator of Power BI reports. With a strong background in sales analysis, product breakdown, customer statistics analysiis, SQL, and engineering skills, I am confident in my ability to contribute significantly to your organization through my intuitive Power B I reports.
 <br>
+On the left and the right are snapshots of a Power BI example dashboard. Given a simple data set I analyzed and broke down certain key metrics of trends in the data set. I have also identified multiple key figures between the sales, products and customers that will provide powerful insights into decision making for stakeholders and business managers alike.
+    <br>
 Throughout my career, I have consistently leveraged Power BI to drive data-driven decision-making and provide valuable insights to various stakeholders. I possess a deep understanding of the Power BI ecosystem, including data modeling, report development, and dashboard creation. My skills extend beyond mere visualization, as I am adept at integrating complex data sources, writing efficient SQL queries, and performing advanced data transformations.
 <br>
 In terms of sales breakdown, I have successfully designed and implemented interactive sales dashboards that allow for comprehensive analysis of revenue trends, regional performance, and key performance indicators (KPIs). These visualizations have empowered sales teams to identify opportunities, optimize strategies, and track progress towards targets in real-time.
 <br>
 Regarding product breakdown, I have constructed robust analytical models that offer comprehensive visibility into product performance, inventory management, and demand forecasting. By developing interactive reports and visualizations, I have enabled organizations to identify top-performing products, make informed inventory decisions, and drive profitability.
 <br>
-Furthermore, my expertise in customer breakdown has allowed me to create dynamic customer segmentation models, customer lifetime value (CLTV) analysis, and churn prediction models. By leveraging these insights, organizations can enhance customer satisfaction, develop targeted marketing campaigns, and improve customer retention rates.
-<br>
+
 In addition to my technical skills, I am highly proficient in analyzing data, identifying patterns, and deriving actionable recommendations. I possess a strong business acumen that enables me to translate complex data into meaningful insights that drive strategic decision-making.
 <br>
 I am excited about the possibility of contributing my expertise and passion for Power BI to your esteemed organization. I am confident that my skills, along with my ability to collaborate effectively with cross-functional teams, will make me a valuable asset in leveraging data to achieve business goals.<br><br>
